[gd_scene load_steps=4 format=3 uid="uid://dbjmalswo5k6w"]

[ext_resource type="Script" path="res://scripts/railgun_shell.gd" id="1_xhjpn"]
[ext_resource type="Texture2D" uid="uid://bxhcjk4qim0oc" path="res://assets/railgun_shell.png" id="2_ftxem"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pfgdi"]
size = Vector2(14, 2)

[node name="railgun_shell" type="Area2D"]
script = ExtResource("1_xhjpn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_pfgdi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ftxem")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-8.9407e-08, 0)
scale = Vector2(0.9, 0.3)

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
